--- a/Device Configuration/Compute Engine Instances/etc/nginx/sites-available/old.akbal.dev.conf
+++ b/Device Configuration/Compute Engine Instances/etc/nginx/sites-available/old.akbal.dev.conf
@@ -15,15 +15,10 @@ server {
 	include nginxconfig.io/security.conf;
 
 	# index.php
-	index index.php;
-
-	# index.php fallback
-	location / {
-		try_files $uri $uri/ /index.php?$query_string;
-	}
+	index index.html;
 
 	# handle .php
-	location ~ \.php$ {
+	location ~ \.(php|html)$ {
 		include nginxconfig.io/php_fastcgi.conf;
 	}
 
