--- a/Device Configuration/Hosting/usr/local/openresty/nginx/sites/api.r34.app.conf
+++ b/Device Configuration/Hosting/usr/local/openresty/nginx/sites/api.r34.app.conf
@@ -1,3 +1,4 @@
+include master_params.api.r34.app;
 
 server {
     listen 80;
@@ -31,6 +32,9 @@ server {
     include server_params.api.r34.app;
 
     location / {
+        
+        include root_params.api.r34.app;
+
         proxy_pass http://127.0.0.1:8100;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
